第二次提交

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
 
         <RadioButton
                 android:id="@+id/rb_tab_home"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:button="@null"
@@ -44,7 +44,7 @@
 
         <RadioButton
                 android:id="@+id/rb_tab_second"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:button="@null"
@@ -57,7 +57,7 @@
 
         <RadioButton
                 android:id="@+id/rb_tab_my"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:button="@null"
